--- a/ProjectoFinal/HubUsuario.html
+++ b/ProjectoFinal/HubUsuario.html
@@ -8,8 +8,8 @@
 	<h1>Bienvenido al Hub de Usuario</h1>
 	<div id="options">
 		<a href="AddFriend.html">Agregar Amigos</a>
-		<a href="FriendList.html">Ver Amigos</a>
-        <a href="Chat.html">Chat</a>
+		<a href="FriendList.html">Iniciar Chat</a>
+
 	</div>
 </body>
 </html>
