--- a/ProjectoFinal/Chat.html
+++ b/ProjectoFinal/Chat.html
@@ -16,5 +16,8 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="scriptChat.js"></script>
+  <script>
+   
+  </script>
 </body>
 </html>
