--- a/ProjectoFinal/registro.html
+++ b/ProjectoFinal/registro.html
@@ -7,22 +7,27 @@
 <body>
 	<h1>Formulario de Registro</h1>
 	<form id="register-form" onsubmit="registerFormSubmit(event)">
-		<label for="user">Nombre de Usuario:</label>
-		<input type="text" id="user" name="user" required><br>
+        <label for="user">Nombre de Usuario:</label>
+        <input type="text" id="user" name="user" required><br>
 
-		<label for="pass">Contraseña:</label>
-		<input type="password" id="pass" name="pass" required><br>
+        <label for="mail">Correo Electrónico:</label>
+        <input type="email" id="mail" name="mail" required><br>
 
-		<label for="mail">Correo Electrónico:</label>
-		<input type="email" id="mail" name="mail" required><br>
+        <label for="pass">Contraseña:</label>
+        <input type="password" id="pass" name="pass" required oninput="checkPasswordMatch()"><br>
 
-		<label for="codeCountry">Código de País:</label>
-		<select id="codeCountry" name="codeCountry" required></select><br>
+        <label for="pass">Confirmar Contraseña:</label>
+        <input type="password" id="pass2" name="pass2" required oninput="checkPasswordMatch()">
+        <span id="password-error" style="color: red; display: none;">Las contraseñas deben coincidir</span><br>
 
-		<input type="submit" value="Registrarse" onclick="redirectToLogin()">
-	</form>
+        <label for="codeCountry">Código de País:</label>
+        <select id="codeCountry" name="codeCountry" required></select><br>
+		<br>
+        <input type="submit" value="Registrarse" id="register-btn" onclick="redirectToLogin()" disabled>
+    </form>
 
-	<script src="script.js"></script>
+
+	<script src="scriptRegistro.js"></script>
 	<script>
 		window.addEventListener('DOMContentLoaded', function() {
 			populateCountrySelect();
@@ -33,5 +38,30 @@
 		}
 		
 	</script>
+	<script>
+		window.addEventListener('DOMContentLoaded', function() {
+			populateCountrySelect();
+		});
+
+		function redirectToLogin() {
+			window.location.href = "login.html";
+		}
+
+		function checkPasswordMatch() {
+			const pass1 = document.getElementById('pass').value;
+			const pass2 = document.getElementById('pass2').value;
+			const passwordError = document.getElementById('password-error');
+			const registerBtn = document.getElementById('register-btn');
+
+			if (pass1 === pass2) {
+				passwordError.style.display = 'none';
+				registerBtn.disabled = false;
+			} else {
+				passwordError.style.display = 'block';
+				registerBtn.disabled = true;
+			}
+		}
+	</script>
+
 </body>
 </html>
